--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ MarkupSafe == 1.1.1
 Werkzeug == 0.15.5
 pandas >= 0.19
 requests==2.22.0
-ChatterBot==1.0.8
+ChatterBot
 chatterbot-corpus==1.2.0
 nltk==3.2.5
 spacy==2.2.4
