--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,8 @@ Werkzeug == 0.15.5
 requests==2.22.0
 SQLAlchemy==1.3.24
 pandas >= 0.19
+numpy >= 1.9.2
+scipy >= 0.15.1
+scikit-learn >= 0.18
+matplotlib >= 1.4.3
 
