--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,17 @@ scipy >= 0.15.1
 scikit-learn >= 0.18
 matplotlib >= 1.4.3
 scikit-image==0.18.3
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+keras-vis==0.4.1
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow @ file:///tensorflow-2.7.0-cp37-cp37m-linux_x86_64.whl
+tensorflow-datasets==4.0.1
+tensorflow-estimator==2.7.0
+tensorflow-gcs-config==2.7.0
+tensorflow-hub==0.12.0
+tensorflow-io-gcs-filesystem==0.22.0
+tensorflow-metadata==1.4.0
+tensorflow-probability==0.15.0
